add deals to user

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,6 +60,7 @@
                 <li class="nav-item mr-3 dropdown text-center">
                     <a class="nav-link btn rounded-pill btn-secondary" data-toggle="dropdown" id="profileDropdown"><i class="fa-solid fa-user fa-lg mx-1"></i></a>
                     <div class="dropdown-menu" aria-labelledby="profileDropdown">
+                        <a class="dropdown-item" href="{{ path('app_user_profile') }}">Profil</a>
                         <a class="dropdown-item" href="#">Mes Deals</a>
                         <a class="dropdown-item" href="#">Paramètres</a>
                         <a class="dropdown-item" href="{{ path("app_logout") }}">Deconnexion</a>
