--- a/templates/deal/index.html.twig
+++ b/templates/deal/index.html.twig
@@ -10,13 +10,21 @@
         .full-height {
             height: 100vh;
         }
+
         .central-section {
             padding-left: calc(15% - 5px);
             border-right: 1px solid #ccc;
         }
+
         .object-fit-cover {
             object-fit: cover;
         }
+
+        .custom-border {
+            border: 1px solid #000; /* Couleur et épaisseur de la bordure */
+            border-radius: 5px; /* Rayon des coins de la bordure */
+        }
+    </style>
     </style>
 {% endblock %}
 
@@ -32,43 +40,58 @@
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex align-items-center">
                                     <div class="h-100 w-100" style="position: relative;">
-                                        <img src="{{ vich_uploader_asset(deal, 'imageFile') }}" class="card-img h-100 object-fit-cover" alt="{{ deal.imageName }}">
+                                        <img src="{{ vich_uploader_asset(deal, 'imageFile') }}"
+                                             class="card-img h-100 object-fit-cover" alt="{{ deal.imageName }}">
                                     </div>
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
                                         <div class="d-flex align-items-center">
-                                            <button class="btn btn-sm btn-primary rounded-circle mr-2" style="font-weight: bold">
-                                                <i class="fa-solid fa-minus"></i>
-                                            </button>
-                                            {% set noteColor = deal.note > 50 ? 'text-danger' : (deal.note > 20 ? 'text-warning' : (deal.note < 0 ? 'text-info' : (deal.note < 25 ? 'text-primary' : ''))) %}
-                                            <h5 class="card-text {{ noteColor }} font-weight-bold" style="margin-right: 5px">{{ deal.note }}</h5>
-                                            <button class="btn btn-sm btn-danger rounded-circle ml-2" style="font-weight: bold">
-                                                <i class="fa-solid fa-plus"></i>
-                                            </button>
-                                            <a href="{{ path('deal_report', {'id': deal.id}) }}" class="btn btn-sm btn-outline-danger ml-auto" style="font-weight: bold; margin-right: 5px;">
+                                            <div class="d-flex justify-content-between"
+                                                 style="border: 1px solid #000; padding: 5px; border-radius: 15px;">
+                                                {% set isUserLiked = deal.votedUsers.contains(currentUser) %}
+                                                <button class="btn btn-sm minus-btn" style="font-weight: bold; color: blue; border: none; margin-right: 2px;" {% if isUserLiked %}disabled{% endif %} data-deal-id="{{ deal.id }}">
+                                                    <i class="fa-solid fa-minus" style="color: #1683d3;"></i>
+                                                </button>
+                                                {% set noteColor = deal.note > 50 ? 'text-danger' : (deal.note > 20 ? 'text-warning' : (deal.note < 0 ? 'text-info' : (deal.note < 25 ? 'text-primary' : ''))) %}
+                                                <h5 id="{{ deal.id }}" class="card-text {{ noteColor }} font-weight-bold"
+                                                    style="margin-right: 5px;">{{ deal.note }}</h5>
+                                                <button class="btn btn-sm plus-btn"
+                                                        style="font-weight: bold; color: red; border: none; margin-left: 2px; {% if isUserLiked %}disabled{% endif %}" data-deal-id="{{ deal.id }}">
+                                                    <i class="fa-solid fa-plus" style="color: #e40e0e;"></i>
+                                                </button>
+                                            </div>
+
+                                            <a href="{{ path('deal_report', {'id': deal.id}) }}"
+                                               class="btn btn-sm btn-outline-danger ml-auto"
+                                               style="font-weight: bold; margin-right: 5px;">
                                                 <i class="fa-solid fa-flag"></i>
                                             </a>
 
                                         </div>
-                                        <h3 class="card-title mt-3 font-weight-bold" style="color: black">{{ deal.title }}</h3>
+                                        <h3 class="card-title mt-3 font-weight-bold"
+                                            style="color: black">{{ deal.title }}</h3>
                                         <p class="card-text text-muted">
                                             <span class="font-weight-bold">Regular Price:</span> {{ deal.normalPrice }}€
-                                            <span class="font-weight-bold" style="color: black; margin-left: 10px;">{{ deal.price }}€</span>
+                                            <span class="font-weight-bold"
+                                                  style="color: black; margin-left: 10px;">{{ deal.price }}€</span>
                                         </p>
                                         <div class="d-flex justify-content-between align-items-center mt-3">
                                             <a href="{{ deal.link }}" class="btn btn-primary btn-lg rounded-pill mr-3">
                                                 Voir le Deal
                                                 <i class="fa-solid fa-arrow-up-right-from-square ml-2"></i>
                                             </a>
-                                            <button class="btn btn-outline-secondary btn-lg border-dashed">Copy Promo Code</button>
+                                            <button class="btn btn-outline-secondary btn-lg border-dashed">Copy Promo
+                                                Code
+                                            </button>
                                         </div>
                                         <p class="card-text mt-3" style="color: black">{{ deal.description }}</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <a href="{{ path('deal_show', {'id': deal.id}) }}" class="btn btn-primary btn-block">Voir la page du Deal</a>
+                                <a href="{{ path('deal_show', {'id': deal.id}) }}" class="btn btn-primary btn-block">Voir
+                                    la page du Deal</a>
                             </div>
                         </div>
                     </div>
@@ -100,21 +123,21 @@
 
                                 <div id="card-container">
                                     {% for deal in hotDeals %}
-                                    <div class="card mb-3">
-                                        <div>
+                                        <div class="card mb-3">
                                             <div>
-                                                <div class="card-body">
-                                                    <h5 class="card-title">{{ deal.title }}</h5>
-                                                    <div class="d-flex mb-2">
-                                                        <div>
-                                                            <span style="color: #B0413E}}; font-weight: bold">{{ deal.note }}</span>
+                                                <div>
+                                                    <div class="card-body">
+                                                        <h5 class="card-title">{{ deal.title }}</h5>
+                                                        <div class="d-flex mb-2">
+                                                            <div>
+                                                                <span style="color: #B0413E}}; font-weight: bold">{{ deal.note }}</span>
+                                                            </div>
                                                         </div>
+                                                        <p class="card-text">{{ deal.description }}</p>
                                                     </div>
-                                                    <p class="card-text">{{ deal.description }}</p>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
                                     {% endfor %}
                                 </div>
                             </div>
@@ -127,4 +150,49 @@
 
     <!-- Chargement du script Bootstrap -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.minus-btn').click(function() {
+                var dealId = $(this).data('deal-id');
+                console.log(dealId);
+
+                fetch('/deal/' + dealId + '/decrement', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ dealId: dealId })
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        $('#note').text(data.note);
+                    })
+                    .catch(error => {
+                        console.log(error);
+                    });
+            });
+
+            $('.plus-btn').click(function() {
+                var dealId = $(this).data('deal-id');
+                console.log(dealId);
+
+                fetch('/deal/' + dealId + '/increment', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ dealId: dealId })
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        $("#" + dealId).text(data.note);
+                        console.log("reload: " + data.note);
+                    })
+                    .catch(error => {
+                        console.log(error);
+                    });
+            });
+        });
+    </script>
 {% endblock %}
