--- a/templates/deal/index.html.twig
+++ b/templates/deal/index.html.twig
@@ -50,14 +50,14 @@
                                             <div class="d-flex justify-content-between"
                                                  style="border: 1px solid #000; padding: 5px; border-radius: 15px;">
                                                 {% set isUserLiked = deal.votedUsers.contains(currentUser) %}
-                                                <button class="btn btn-sm minus-btn" style="font-weight: bold; color: blue; border: none; margin-right: 2px;" {% if isUserLiked %}disabled{% endif %} data-deal-id="{{ deal.id }}">
+                                                <button id="button1{{ deal.id }}" class="btn btn-sm minus-btn" style="font-weight: bold; color: blue; border: none; margin-right: 2px;" {% if isUserLiked %}disabled{% endif %} data-deal-id="{{ deal.id }}">
                                                     <i class="fa-solid fa-minus" style="color: #1683d3;"></i>
                                                 </button>
                                                 {% set noteColor = deal.note > 50 ? 'text-danger' : (deal.note > 20 ? 'text-warning' : (deal.note < 0 ? 'text-info' : (deal.note < 25 ? 'text-primary' : ''))) %}
-                                                <h5 id="{{ deal.id }}" class="card-text {{ noteColor }} font-weight-bold"
+                                                <h5 id="note{{ deal.id }}" class="card-text {{ noteColor }} font-weight-bold"
                                                     style="margin-right: 5px;">{{ deal.note }}</h5>
-                                                <button class="btn btn-sm plus-btn"
-                                                        style="font-weight: bold; color: red; border: none; margin-left: 2px; {% if isUserLiked %}disabled{% endif %}" data-deal-id="{{ deal.id }}">
+                                                <button id="button2{{ deal.id }}" class="btn btn-sm plus-btn"
+                                                        style="font-weight: bold; color: red; border: none; margin-left: 2px; {% if isUserLiked %}disabled{% endif %}"  {% if isUserLiked %}disabled{% endif %} data-deal-id="{{ deal.id }}">
                                                     <i class="fa-solid fa-plus" style="color: #e40e0e;"></i>
                                                 </button>
                                             </div>
@@ -155,7 +155,6 @@
         $(document).ready(function() {
             $('.minus-btn').click(function() {
                 var dealId = $(this).data('deal-id');
-                console.log(dealId);
 
                 fetch('/deal/' + dealId + '/decrement', {
                     method: 'POST',
@@ -166,7 +165,9 @@
                 })
                     .then(response => response.json())
                     .then(data => {
-                        $('#note').text(data.note);
+                        $("#note" + dealId).text(data.note);
+                        $("#button1" + dealId).attr("disabled", true);
+                        $("#button2" + dealId).attr("disabled", true);
                     })
                     .catch(error => {
                         console.log(error);
@@ -186,8 +187,9 @@
                 })
                     .then(response => response.json())
                     .then(data => {
-                        $("#" + dealId).text(data.note);
-                        console.log("reload: " + data.note);
+                        $("#note" + dealId).text(data.note);
+                        $("#button1" + dealId).attr("disabled", true);
+                        $("#button2" + dealId).attr("disabled", true);
                     })
                     .catch(error => {
                         console.log(error);
