Ajout recherche ET BUG DE MERDE NAVBAR

--- a/assets/styles/deal_index.css
+++ b/assets/styles/deal_index.css
@@ -34,6 +34,5 @@
 }
 
 .central-section {
-    padding-left: calc(15% - 5px); /* Espacement à droite de la partie centrale */
-    border-right: 1px solid #ccc;
+    padding-left: calc(15% - 5px);
 }
