fix profile pages + navbar

--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -86,4 +86,11 @@
             </div>
         </div>
     </div>
+
+    <script>
+        $(".profile-navbar").find(".active").removeClass("active");
+        $(".profile1").addClass("active");
+    </script>
+
 {% endblock %}
+
