--- a/templates/user/profile_navbar.html.twig
+++ b/templates/user/profile_navbar.html.twig
@@ -1,11 +1,19 @@
 {% block nav %}
-    <div class="container mt-3">
-        <div class="row text-center">
-            <div class="col">
-                <a class="btn btn-secondary" href="{{ path("app_user_profile") }}">Aperçu</a>
-                <a class="btn btn-secondary" href="#">Deals ({{ user.deals|length }})</a>
-                <a class="btn btn-secondary" href="#">Deals sauvegardés ({{ user.likedDeals|length }})</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light profile-navbar">
+        <div class="container">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item profile1">
+                        <a class="nav-link active" href="{{ path("app_user_profile") }}">Aperçu</a>
+                    </li>
+                    <li class="nav-item profile2">
+                        <a class="nav-link" href="{{ path("app_user_profile_deals") }}">Mes deals</a>
+                    </li>
+                    <li class="nav-item profile3">
+                        <a class="nav-link" href="{{ path("app_user_profile_likes") }}">Deals sauvegardés</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
+    </nav>
 {% endblock %}
