--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,70 +19,80 @@
 
 <!-- Top Menu -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark px-4">
-    <a href="{{ path('deal_index') }}"
-       class="nav-logo nav-hideSearch flex flex--shrink-0 boxAlign-as--all-c text--h space--mr-2 router-link-active"
-       rel="home" style="background: url('/assets/images/mysvg.svg');" data-t-click="" data-t="homeLink">
-        <img src="https://www.dealabs.com/assets/img/logo/default-light_04b6a.svg">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('deal_index') }}">Bons plans</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('promo_code_index') }}">Codes Promo</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Gratuit</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false">
-                    Menu
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Category 1</a>
-                    <a class="dropdown-item" href="#">Category 2</a>
-                    <a class="dropdown-item" href="#">Category 3</a>
-                </div>
-            </li>
-            <li class="nav-item ml-3">
-                <form id="dealSearchForm" class="form-inline my-2 my-lg-0" action="{{ path("deal_search") }}" method="POST">
-                    <button class="btn my-2 my-sm-0 rounded-pill" type="submit" ><i class="fa-solid fa-search fa-lg mx-1"></i></button>
-                    <input id="dealSearchInput" name="query" class="form-control mr-sm-2 rounded-pill search-input" type="search" placeholder="Search" aria-label="Search">
-                </form>
-            </li>
-            {% if app.user %}
-                <li class="nav-item mr-3 dropdown text-center">
-                    <a class="nav-link btn rounded-pill btn-secondary" data-toggle="dropdown" id="profileDropdown"><i class="fa-solid fa-user fa-lg mx-1"></i></a>
-                    <div class="dropdown-menu" aria-labelledby="profileDropdown">
-                        <a class="dropdown-item" href="{{ path('app_user_profile') }}">Profil</a>
-                        <a class="dropdown-item" href="#">Mes Deals</a>
-                        <a class="dropdown-item" href="#">Paramètres</a>
-                        <a class="dropdown-item" href="{{ path("app_logout") }}">Deconnexion</a>
-                    </div>
+    <div class="container">
+        <a href="{{ path('deal_index') }}"
+           class="nav-logo nav-hideSearch flex flex--shrink-0 boxAlign-as--all-c text--h space--mr-2 router-link-active"
+           rel="home" style="background: url('/assets/images/mysvg.svg');" data-t-click="" data-t="homeLink">
+            <img src="https://www.dealabs.com/assets/img/logo/default-light_04b6a.svg">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse ml-2" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('deal_index') }}">Bons plans</a>
                 </li>
-            {% else %}
-                <li class="nav-item mx-3">
-                    <a class="nav-link btn btn-secondary rounded-pill" data-toggle="modal" data-target="#loginmodal">
-                        <div class="mx-2">Connexion</div>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('promo_code_index') }}">Codes Promo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Gratuit</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Menu
                     </a>
-                    {{ include('security/login_modal.html.twig') }}
-                </li>
-            {% endif %}
-            <li class="nav-item">
-                <a class="nav-link btn btn-primary rounded-pill text-white mr-2 post-btn" href="{{ path('deal_new') }}">
-                    <div class="mx-2">
-                        <i class="fa-solid fa-plus mr-2"></i>
-                        Poster
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Category 1</a>
+                        <a class="dropdown-item" href="#">Category 2</a>
+                        <a class="dropdown-item" href="#">Category 3</a>
                     </div>
-                </a>
-            </li>
-        </ul>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item ml-3">
+                    <form id="dealSearchForm" class="form-inline my-2 my-lg-0" action="{{ path("deal_search") }}"
+                          method="POST">
+                            <button class="btn my-2 my-sm-0 rounded-pill" type="submit"><i
+                                        class="fa-solid fa-search fa-lg mx-1" style="color: #FFFFFF"></i></button>
+                            <input id="dealSearchInput" name="query" class="form-control mr-sm-2 rounded-pill search-input"
+                                   type="search" placeholder="Search" aria-label="Search">
+                    </form>
+                </li>
+                {% if app.user %}
+                    <li class="nav-item mr-3 dropdown text-center">
+                        <a class="nav-link btn rounded-pill btn-secondary" data-toggle="dropdown"
+                           id="profileDropdown"><i class="fa-solid fa-user fa-lg mx-1"></i></a>
+                        <div class="dropdown-menu" aria-labelledby="profileDropdown">
+                            <a class="dropdown-item" href="{{ path('app_user_profile') }}">Profil</a>
+                            <a class="dropdown-item" href="{{ path("app_user_profile_deals") }}">Mes Deals</a>
+                            <a class="dropdown-item" href="{{ path("app_logout") }}">Deconnexion</a>
+                        </div>
+                    </li>
+                {% else %}
+                    <li class="nav-item mx-3">
+                        <a class="nav-link btn btn-secondary rounded-pill" data-toggle="modal"
+                           data-target="#loginmodal">
+                            <div class="mx-2">Connexion</div>
+                        </a>
+                        {{ include('security/login_modal.html.twig') }}
+                    </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link btn btn-primary rounded-pill text-white mr-2 post-btn"
+                       href="{{ path('deal_new') }}">
+                        <div class="mx-2">
+                            <i class="fa-solid fa-plus mr-2"></i>
+                            Poster
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
@@ -94,7 +104,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script>
-    document.getElementById('dealSearchForm').addEventListener('submit', function(e) {
+    document.getElementById('dealSearchForm').addEventListener('submit', function (e) {
         e.preventDefault(); // Prevent form submission
 
         var searchInput = document.getElementById('dealSearchInput').value;
