--- a/templates/user/liked_deals.html.twig
+++ b/templates/user/liked_deals.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Deal index{% endblock %}
-
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -10,12 +8,6 @@
         .full-height {
             height: 100vh;
         }
-
-        .central-section {
-            padding-left: calc(15% - 5px);
-            border-right: 1px solid #ccc;
-        }
-
         .object-fit-cover {
             object-fit: cover;
         }
@@ -23,13 +15,16 @@
 {% endblock %}
 
 {% block body %}
-    <div class="container-fluid full-height">
-    <div class="row full-height">
-        <div class="col-9" style="padding-left: calc(15% - 5px)">
-            <!-- Partie centrale de la page (3/4 de la largeur, hauteur maximale) -->
-            <div class="h-100 text-white p-3">
+    {% include 'user/profile_navbar.html.twig' %}
+    <div class="container full-height">
+    <div class="row">
+        <div class="col">
+            <div class="card h-100 bg-grey mt-3">
+                <div class="card-header text-center">
+                    <h3 class="">Deals sauvegardés</h3>
+                </div>
                 {% for deal in deals %}
-                    <div style="margin-top: 15px; margin-bottom: 15px">
+                    <div style="margin-top: 10px; margin-bottom: 15px" class="px-4">
                         <div class="card h-60 animate__animated animate__fadeInUp">
                             <div class="row g-0">
                                 <div class="col-md-4 d-flex align-items-center">
@@ -43,19 +38,15 @@
                                         <div class="d-flex align-items-center" {{ stimulus_controller('deal', {'deal': deal.id}) }} {{ stimulus_target('deal', 'deal', deal.id) }}>
                                             <div class="d-flex justify-content-between"
                                                  style="border: 1px solid #000; padding: 5px; border-radius: 15px;">
-                                                {% set isUserVoted = deal.votedUsers.contains(currentUser) %}
-                                                <button id="button1{{ deal.id }}" class="btn btn-sm minus-btn"
-                                                        style="font-weight: bold; color: blue; border: none; margin-right: 2px; {% if isUserVoted or app.user is null %}visibility: hidden;{% endif %}"
-                                                        data-deal-id="{{ deal.id }}">
+                                                {% set isUserVoted = deal.votedUsers.contains(user) %}
+                                                <button id="button1{{ deal.id }}" class="btn btn-sm minus-btn" style="font-weight: bold; color: blue; border: none; margin-right: 2px;" {% if isUserVoted %}disabled{% endif %} data-deal-id="{{ deal.id }}">
                                                     <i class="fa-solid fa-minus" style="color: #1683d3;"></i>
                                                 </button>
                                                 {% set noteColor = deal.note > 50 ? 'text-danger' : (deal.note > 20 ? 'text-warning' : (deal.note < 0 ? 'text-info' : (deal.note < 25 ? 'text-primary' : ''))) %}
-                                                <h5 id="note{{ deal.id }}"
-                                                    class="card-text {{ noteColor }} font-weight-bold"
-                                                    style="margin-right: 5px;">{{ deal.note }}°</h5>
+                                                <h5 id="note{{ deal.id }}" class="card-text {{ noteColor }} font-weight-bold"
+                                                    style="margin-right: 5px;">{{ deal.note }}</h5>
                                                 <button id="button2{{ deal.id }}" class="btn btn-sm plus-btn"
-                                                        style="font-weight: bold; color: red; border: none; margin-left: 2px; {% if isUserVoted or app.user is null %}visibility: hidden;{% endif %}"
-                                                        data-deal-id="{{ deal.id }}">
+                                                        style="font-weight: bold; color: red; border: none; margin-left: 2px; {% if isUserVoted %}disabled{% endif %}"  {% if isUserVoted %}disabled{% endif %} data-deal-id="{{ deal.id }}">
                                                     <i class="fa-solid fa-plus" style="color: #e40e0e;"></i>
                                                 </button>
                                             </div>
@@ -65,7 +56,7 @@
                                                style="font-weight: bold; margin-right: 5px;">
                                                 <i class="fa-solid fa-flag"></i>
                                             </a>
-                                            {% set isUserLiked = deal.likedUsers.contains(currentUser) %}
+                                            {% set isUserLiked = deal.likedUsers.contains(user) %}
                                             <button
                                                     {{ stimulus_action('deal', 'like') }}
                                                     class="btn btn-sm btn-outline-secondary {% if isUserLiked %} active {% endif %}"
@@ -109,44 +100,17 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-3 container-fluid" style="padding-right: calc(4% - 5px);">
-            <div class="row justify-content-center mt-5">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5 class="card-title text-center">Les plus HOT !</h5>
-                        </div>
-                        <div id="card-container" class="card-body">
-                            {% for deal in hotDeals %}
-                                <div class="card mb-3 shadow-sm">
-                                    <div class="row g-0">
-                                        <div class="col-md-12">
-                                            <div class="card-body">
-                                                <h5 class="card-title font-weight-bold">{{ deal.title }}</h5>
-                                                <div class="d-flex mb-2">
-                                                    <div>
-                                                        <span class="text-danger font-weight-bold">{{ deal.note }}°</span>
-                                                    </div>
-                                                </div>
-                                                <p class="card-text">{{ deal.description }}</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <!-- Chargement du script Bootstrap -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-        $(document).ready(function () {
-            $('.minus-btn').click(function () {
+        $(".profile-navbar").find(".active").removeClass("active");
+        $(".profile3").addClass("active");
+
+        $(document).ready(function() {
+            $('.minus-btn').click(function() {
                 var dealId = $(this).data('deal-id');
 
                 fetch('/deal/' + dealId + '/decrement', {
@@ -154,7 +118,7 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({dealId: dealId})
+                    body: JSON.stringify({ dealId: dealId })
                 })
                     .then(response => response.json())
                     .then(data => {
@@ -167,7 +131,7 @@
                     });
             });
 
-            $('.plus-btn').click(function () {
+            $('.plus-btn').click(function() {
                 var dealId = $(this).data('deal-id');
                 console.log(dealId);
 
@@ -176,7 +140,7 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({dealId: dealId})
+                    body: JSON.stringify({ dealId: dealId })
                 })
                     .then(response => response.json())
                     .then(data => {
