try adding font + deal hot page

--- a/templates/deal/index.html.twig
+++ b/templates/deal/index.html.twig
@@ -23,6 +23,9 @@
 {% endblock %}
 
 {% block body %}
+    {% block nav %}
+        {% include 'deal/deal_navbar.html.twig' %}
+    {% endblock %}
     <div class="container-fluid full-height">
     <div class="row full-height">
         <div class="col-9" style="padding-left: calc(15% - 5px)">
@@ -79,7 +82,7 @@
                                         <h3 class="card-title mt-3 font-weight-bold"
                                             style="color: black">{{ deal.title }}</h3>
                                         <p class="card-text text-muted">
-                                            <span class="font-weight-bold">Regular Price:</span> {{ deal.normalPrice }}€
+                                            <span class="font-weight-bold">Regular Price:</span> <s>{{ deal.normalPrice }}€</s>
                                             <span class="font-weight-bold"
                                                   style="color: black; margin-left: 10px;">{{ deal.price }}€</span>
                                         </p>
