--- a/templates/promo_code/index.html.twig
+++ b/templates/promo_code/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}PromoCode index{% endblock %}
 
 {% block body %}
+    {% block nav %}
+        {% include 'deal/deal_navbar.html.twig' %}
+    {% endblock %}
     <h1>PromoCode index</h1>
 
     <table class="table">
