--- a/templates/deal/new.html.twig
+++ b/templates/deal/new.html.twig
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <h1 class="mb-4 animate__animated animate__fadeInUp">Create new Deal</h1>
+                <h1 class="mb-4 animate__animated animate__fadeInUp">Creation d'un nouveau deal</h1>
 
                 <div class="card animate__animated animate__fadeInUp">
                     <div class="card-body">
