--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'Helvetica';
+    font-family: Helvetica;
     font-style: normal;
     font-weight: 400;
-    src: url('../fonts/Helvetica/Helvetica.ttf') format('truetype');
+    src: url('../fonts/Helvetica/Helvetica-Bold.ttf') format('truetype');
 }
 
 body {
     background-color: #E9EAED;
-    font-family: 'Helvetica', sans-serif;
+    font-family: Helvetica,sans-serif;
 }
